# sudoku-solver

./: README.md  run.py
app/: __init__.py  generator.py  pyproject.toml  routes.py  solver.py
app/templates/: index.html
